--- a/pushup_mvp/config.example.yaml
+++ b/pushup_mvp/config.example.yaml
@@ -21,38 +21,38 @@ slots:
       color: green
       exercise: "标准支架俯卧撑"
       reps: "10-15 x1"
-      image: "<CHEST_A1_IMAGE_URL_OR_PATH>"
+      image: "images/A1.jpg"
     - id: A2
       name: "胸-中部慢速"
       color: green
       exercise: "慢速俯卧撑（下3秒）"
       reps: "8-12 x1"
-      image: "<CHEST_A2_IMAGE_URL_OR_PATH>"
+      image: "images/A2.jpg"
     - id: A3
       name: "胸-下沿/顶峰收缩"
       color: green
       exercise: "顶峰停1秒俯卧撑"
       reps: "8-12 x1"
-      image: "<CHEST_A3_IMAGE_URL_OR_PATH>"
+      image: "images/A3.jpg"
   shoulder:
     - id: B1
       name: "肩-上宽位"
       color: red
       exercise: "偏肩俯卧撑"
       reps: "8-12 x1"
-      image: "<SHOULDER_B1_IMAGE_URL_OR_PATH>"
+      image: "images/B1.jpg"
     - id: B2
       name: "肩-斜向位（稳定）"
       color: red
       exercise: "慢速偏肩俯卧撑（下3秒）"
       reps: "6-10 x1"
-      image: "<SHOULDER_B2_IMAGE_URL_OR_PATH>"
+      image: "images/B2.jpg"
     - id: B3
       name: "肩-内收位（肩+手臂）"
       color: red
       exercise: "肩手混合俯卧撑（肘更贴身）"
       reps: "8-12 x1"
-      image: "<SHOULDER_B3_IMAGE_URL_OR_PATH>"
+      image: "images/B3.jpg"
   triceps:
     - id: C1
       name: "手臂-窄距"
@@ -66,35 +66,48 @@ slots:
       exercise: "小幅快泵"
       reps: "15-25 x1"
       image: "<TRICEPS_C2_IMAGE_URL_OR_PATH>"
+  back:
+    - id: D1
+      name: "背-展开位"
+      color: blue
+      exercise: "背部激活俯卧撑"
+      reps: "8-12 x1"
+      image: "images/D1.jpg"
+    - id: D2
+      name: "背-夹背位"
+      color: blue
+      exercise: "夹背稳定俯卧撑"
+      reps: "8-12 x1"
+      image: "images/D2.jpg"
 
 rotation:
   mon:
     "10:40": A1
     "11:40": B2
-    "14:00": C1
+    "14:00": D1
     "16:30": A2
-    "19:10": B1
+    "19:10": C1
   tue:
     "10:40": B1
-    "11:40": A2
-    "14:00": C2
+    "11:40": A3
+    "14:00": D2
     "16:30": B3
-    "19:10": A3
+    "19:10": C2
   wed:
-    "10:40": B2
-    "11:40": A1
-    "14:00": C1
-    "16:30": B2
-    "19:10": A2
-  thu:
-    "10:40": A3
-    "11:40": B1
-    "14:00": C2
-    "16:30": A1
-    "19:10": B3
-  fri:
     "10:40": A2
     "11:40": B2
-    "14:00": C1
+    "14:00": D1
     "16:30": A1
-    "19:10": B2
+    "19:10": C1
+  thu:
+    "10:40": B1
+    "11:40": A3
+    "14:00": D2
+    "16:30": B2
+    "19:10": C2
+  fri:
+    "10:40": A1
+    "11:40": B3
+    "14:00": D1
+    "16:30": A2
+    "19:10": D2
