--- a/pushup_mvp/config.yaml
+++ b/pushup_mvp/config.yaml
@@ -1,8 +1,8 @@
 timezone: "Asia/Shanghai"
 telegram:
-  bot_token: "<TELEGRAM_BOT_TOKEN>"
+  bot_token: "8390490834:AAHIIRfyaGmVyLQ_Z7liuzQHSK0F8TiAf-c"
   users:
-    - chat_id: 123456789
+    - chat_id: 5189664230
       name: "Hanzhi"
 
 reminders:
